--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
     "eslint": "8.29.0",
-    "eslint-config-next": "13.0.6",
+    "eslint-config-next": "^12.0.4",
     "next": "13.0.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "^3.2.4",
     "typescript": "4.9.4"
+  },
+  "devDependencies": {
+    "@tailwindcss/forms": "^0.5.3"
   }
 }
